--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -64,6 +64,12 @@
                     </a>
                 </li>
                 <li class="sidebar-dropdown">
+                    <a href="faq.html">
+                        <i class="fas fa-question"></i>                       
+                         <span>FAQ</span>
+                    </a>
+                </li>
+                <li class="sidebar-dropdown">
                     <a href="branding.html">
                         <i class="fas fa-palette"></i>
                         <span>Branding</span>
