--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,16 @@ div.event-book-button {
     font-size: 1.2em;
 }
 
+/*FAQ*/
+
+.faq-question{
+    color:var(--colour-light-primary)
+}
+
+.faq-question:hover{
+    color:var(--colour-dark-primary)
+}
+
 /* Branding */
 .white-asset {
     background-color: var(--colour-dark-primary);
